--- a/HsShowCase/utility/UtilityModule.mxml
+++ b/HsShowCase/utility/UtilityModule.mxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:Module xmlns:mx="http://www.adobe.com/2006/mxml" 
-		   layout="absolute" width="100%" height="100%" 
+		   layout="vertical" width="100%" height="100%" 
 		   xmlns:view="org.hamster.showcase.utility.view.*">
 	<mx:Metadata>
 		[ResourceBundle("utility")]
