--- a/HsAlive30/game/org/hamster/alive30/game/GameModule.mxml
+++ b/HsAlive30/game/org/hamster/alive30/game/GameModule.mxml
@@ -1,31 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?> 
 <mx:Module xmlns:mx="http://www.adobe.com/2006/mxml" 
-		   layout="absolute" width="100%" height="100%" xmlns:container="org.hamster.alive30.game.container.*" xmlns:vo="org.hamster.alive30.game.model.vo.*" xmlns:util="org.hamster.alive30.common.util.*">
-	<container:GameMainContainer id="mainContainer" width="100%" height="100%">
-		<container:bulletListVOArray><mx:Array>
-			<vo:BulletListVO timeGap="2000"><vo:bulletVOList><mx:Array>
-				<vo:BulletVO x="10" y="600" type="blue">
-					<vo:speedVector><util:Vector2D x="2" y="-2" /></vo:speedVector>
-				</vo:BulletVO>
-				<vo:BulletVO x="50" y="600" type="blue">
-					<vo:speedVector><util:Vector2D x="2" y="-2" /></vo:speedVector>
-				</vo:BulletVO>
-				<vo:BulletVO x="90" y="600" type="blue">
-					<vo:speedVector><util:Vector2D x="2" y="-2" /></vo:speedVector>
-				</vo:BulletVO>
-			</mx:Array></vo:bulletVOList></vo:BulletListVO>
-										 
-			<vo:BulletListVO timeGap="4000"><vo:bulletVOList><mx:Array>
-				<vo:BulletVO x="10" y="600" type="blue">
-					<vo:speedVector><util:Vector2D x="2" y="-2" /></vo:speedVector>
-				</vo:BulletVO>
-				<vo:BulletVO x="50" y="600" type="red">
-					<vo:speedVector><util:Vector2D x="2" y="-2" /></vo:speedVector>
-				</vo:BulletVO>
-				<vo:BulletVO x="90" y="600" type="red">
-					<vo:speedVector><util:Vector2D x="2" y="-2" /></vo:speedVector>
-				</vo:BulletVO>
-			</mx:Array></vo:bulletVOList></vo:BulletListVO>
-		</mx:Array></container:bulletListVOArray>
-	</container:GameMainContainer>
+		   layout="absolute" width="100%" height="100%" 
+		   xmlns:container="org.hamster.alive30.game.container.*" 
+		   xmlns:vo="org.hamster.alive30.game.model.vo.*" 
+		   xmlns:util="org.hamster.alive30.common.util.*" 
+		   creationComplete="module1_creationCompleteHandler(event)">
+	<mx:Script>
+		<![CDATA[
+			import mx.events.FlexEvent;
+			
+			import org.hamster.alive30.common.facade.AppFacade;
+			import org.hamster.alive30.game.mediator.GameModuleMediator;
+			[Bindable] public var bulletListArray:Array; 
+			
+			private var facade:AppFacade = AppFacade.instance;
+
+			protected function module1_creationCompleteHandler(event:FlexEvent):void
+			{
+				facade.registerMediator(new GameModuleMediator(this));
+				
+				// facade.sendNotification(AppFacade.LOAD_BULLET_LIST);
+			}
+
+		]]>
+	</mx:Script>
+	<container:GameMainContainer id="mainContainer" width="100%" height="100%" 
+								 bulletListVOArray="{bulletListArray}" />
 </mx:Module>
