--- a/HsAlive30/game/org/hamster/alive30/game/GameModule.mxml
+++ b/HsAlive30/game/org/hamster/alive30/game/GameModule.mxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?> 
-<mx:Module xmlns:mx="http://www.adobe.com/2006/mxml" 
+<mx:Module xmlns:mx="http://www.adobe.com/2006/mxml"
 		   layout="absolute" width="100%" height="100%" 
 		   xmlns:container="org.hamster.alive30.game.container.*" 
 		   xmlns:vo="org.hamster.alive30.game.model.vo.*" 
@@ -9,8 +9,11 @@
 		<![CDATA[
 			import mx.events.FlexEvent;
 			
+			import org.hamster.alive30.common.constant.AppConstants;
 			import org.hamster.alive30.common.facade.AppFacade;
 			import org.hamster.alive30.game.mediator.GameModuleMediator;
+			import org.hamster.alive30.game.util.GameConstants;
+			
 			[Bindable] public var bulletListArray:Array; 
 			
 			private var facade:AppFacade = AppFacade.instance;
@@ -18,12 +21,13 @@
 			protected function module1_creationCompleteHandler(event:FlexEvent):void
 			{
 				facade.registerMediator(new GameModuleMediator(this));
-				
 				// facade.sendNotification(AppFacade.LOAD_BULLET_LIST);
 			}
 
 		]]>
 	</mx:Script>
-	<container:GameMainContainer id="mainContainer" width="100%" height="100%" 
+	<container:GameMainContainer id="mainContainer"
+								 width="{GameConstants.GAME_WIDTH}" 
+								 height="{GameConstants.GAME_HEIGHT}" 
 								 bulletListVOArray="{bulletListArray}" />
 </mx:Module>
