--- a/trunk/HsAlive30/src/HsAlive.mxml
+++ b/trunk/HsAlive30/src/HsAlive.mxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:Application xmlns:mx="http://www.adobe.com/2006/mxml"  frameRate="60" backgroundColor="white"
-				layout="absolute" minWidth="955" minHeight="600" xmlns:game="org.hamster.alive30.game.*"
-				 applicationComplete="application1_applicationCompleteHandler(event)">
+				layout="absolute" width="800" height="600" xmlns:game="org.hamster.alive30.game.*"
+				applicationComplete="application1_applicationCompleteHandler(event)" 
+				xmlns:view="org.hamster.alive30.menu.view.*">
 	<mx:Script>
 		<![CDATA[
 			import mx.events.FlexEvent;
@@ -67,4 +68,5 @@
 		]]>
 	</mx:Script>
 	<game:GameModule id="gameModule" width="100%" height="100%" />
+	<view:MainMenuPage width="100%" height="100%" />
 </mx:Application>
