--- a/HsAlive30/menu/org/hamster/alive30/menu/view/LevelSelectorPage.mxml
+++ b/HsAlive30/menu/org/hamster/alive30/menu/view/LevelSelectorPage.mxml
@@ -1,12 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="400" height="300"
-		   backgroundColor="black" backgroundAlpha="0.5">
+		   backgroundColor="black" backgroundAlpha="0.5" 
+		   verticalCenter="0" horizontalCenter="0" 
+		   >
+	<mx:Metadata>
+		[Event(name="levelSelected", type="org.hamster.alive30.menu.event.LevelSelectorEvent")]
+	</mx:Metadata>
 	<mx:Script>
 		<![CDATA[
-			[Bindable] public var levelVOList:Array;
+			import mx.events.FlexEvent;
+			
+			import org.hamster.alive30.common.facade.AppFacade;
+			import org.hamster.alive30.common.vo.LevelVO;
+			import org.hamster.alive30.menu.mediator.LevelSelectorMediator;
+			import org.puremvc.as3.patterns.facade.Facade;
+			[Bindable] public var levelVOList:Array = [
+				new LevelVO(),
+				new LevelVO()
+			];
+
+			protected function mainTileList_clickHandler(event:MouseEvent):void
+			{
+				var levelVO:LevelVO = LevelVO(mainTileList.selectedItem);
+			}
 		]]>
 	</mx:Script>
-	<mx:TileList backgroundAlpha="0" width="100%" height="300" 
+	<mx:TileList id="mainTileList" backgroundAlpha="0" width="100%" height="300" 
 				 columnWidth="80" rowHeight="80" dataProvider="{levelVOList}"
+				 click="mainTileList_clickHandler(event)"
 				 itemRenderer="org.hamster.alive30.menu.item.LevelSelectorItem" />
+	
+	<mx:Parallel id="disappearEffect">
+		<mx:Fade id="disappearFade" alphaFrom="1" alphaTo="0" duration="800" target="{this}" />
+	</mx:Parallel>
+	
 </mx:Canvas>
